[package]
name = "rust-arduino"
version = "0.1.0"
edition = "2018"
authors = ["Mateus <mateusgms12@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

panic-halt = "0.2.0"

[dependencies.arduino-hal]

git = "https://github.com/Rahix/avr-hal"
features = ["arduino-leonardo"]

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"